[package]
name = "muerta"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11"
snap = "1.1"
thiserror = "1.0"
compact_str = { version = "0.6", features = [] }
hashbrown = { version = "0.13", features = ["ahash", "inline-more", "nightly"] }

[dev-dependencies]
expect-test = "1.4"

[build-dependencies]
prost-build = "0.11"
muerta-codgen = { path = "../muerta-codgen" }

