[package]
name = "muerta"
version = "0.0.0"
edition = "2021"

[dependencies]
# TODO: move to onlyerror (to achieve faster comp times)
thiserror = "1.0"
prost = "0.11"
snap = "1.1"
# TODO: get off hashbrown (it was added because std hashmap doesn't support
# allocator_api, but we dont care about allocator_api anymore)
hashbrown = { version = "0.14", features = ["ahash", "inline-more", "nightly"] }
dyn-clone = "1.0"

[build-dependencies]
# TODO: move protos to a separate crate
prost-build = "0.11"
