[package]
name = "haste"
version = "0.0.0"
edition.workspace = true

[dependencies]
dungers = { workspace = true, features = ["varint"] }
dyn-clone.workspace = true
hashbrown.workspace = true
haste_protos.workspace = true
haste_vartype.workspace = true
nohash.workspace = true
prost.workspace = true
snap.workspace = true
thiserror.workspace = true

[features]
deadlock = ["haste_protos/deadlock"]
dota2 = ["haste_protos/dota2"]
# TODO(blukai): rename preserve-metadata feature into something more meaningful,
# or get rid of it all together and preserve symbols only in debug builds.
preserve-metadata = []
