[package]
name = "haste_broadcast"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
bytes.workspace = true
http.workspace = true
log.workspace = true
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
reqwest = ["dep:reqwest"]
