[package]
name = "haste_core"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
dyn-clone.workspace = true
hashbrown = { workspace = true, features = ["inline-more"] }
lazy_static.workspace = true
nohash.workspace = true
prost.workspace = true
snap.workspace = true
thiserror.workspace = true
# my other repos
bitbuf = { workspace = true, features = ["varint"] }
valveprotos.workspace = true
varint.workspace = true
# workspace
haste_vartype.workspace = true

[features]
deadlock = ["valveprotos/deadlock"]
dota2 = ["valveprotos/dota2"]
# TODO(blukai): rename preserve-metadata feature into something more meaningful,
# or get rid of it all together and preserve symbols only in debug builds.
preserve-metadata = []
protobuf-src = ["valveprotos/protobuf-src"]
