[package]
name = "haste_dota2"
version = "0.0.0"
edition.workspace = true

[dependencies]
haste_common = { path = "../haste_common" }
haste_dota2_protos = { path = "../haste_dota2_protos" }
thiserror.workspace = true
snap = "1.1"
hashbrown = { version = "0.14", default-features = false, features = ["inline-more"] }
nohash = "0.2"
dyn-clone = "1.0"
haste_vartype.workspace = true

[features]
preserve-metadata = []
