[package]
name = "haste_dota2"
version = "0.0.0"
edition.workspace = true

[dependencies]
dyn-clone.workspace = true
hashbrown.workspace = true
haste_common.workspace = true
haste_dota2_protos.workspace = true
haste_vartype.workspace = true
nohash.workspace = true
snap.workspace = true
thiserror.workspace = true

[features]
# TODO(blukai): rename preserve-metadata feature into something more meaningful,
# or get rid of it all together and preserve symbols only in debug builds.
preserve-metadata = []
