[package]
name = "haste_dota2_deflat_atoms"
version = "0.0.0"
edition = "2021"

[lib]
path = "lib.rs"

[dependencies]
string_cache = "0.8"

[build-dependencies]
string_cache_codegen = "0.5"
haste_common = { path = "../../crates/haste_common" }
haste_dota2_protos = { path = "../../crates/haste_dota2_protos" }
# NOTE: thiserror and snap are deps of haste_dota2::demofile, they are listed
# here because demofile is imported via include macro
thiserror = "1.0"
snap = "1.1"
