[package]
name = "broadcast-download"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
env_logger.workspace = true
haste_broadcast = { workspace = true, features = ["reqwest"] }
reqwest.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
