[package]
name = "broadcast"
version = "0.0.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
argh.workspace = true
env_logger.workspace = true
haste = { workspace = true, features = ["broadcast"] }
reqwest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
